# hotu-engine

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  wl-prepare.sh
include/: app.h  core.h  core.type.h  input-listener.h  input.h  model.h  scene-object.h  scene-object.type.h  scene-renderer.h  scene.h  view.h
include/render/: camera.h  material.h  mesh.h  shader.h  texture.h
include/scene/: scene-object.h  scene.h
include/utility/: align.h  asset-loader.h  dynamic-array.h  math.types.h
src/: core.c  core.internal.h  main.c  model.c  scene-manager.c  scene-manager.h  scene-object.c  scene-renderer.c  scene.c  view.c
src/platform-emscripten/: core.emscripten.c  input.em.c  input.em.h
src/platform-linux/: core.linux.c  input.evdev.c  input.evdev.h
src/render/: camera.c  material.c  mesh.c  shader.c  texture.c
src/scene/: scene-manager.c  scene-manager.h  scene-renderer.c  scene-renderer.h  scene.c
src/utility/: asset-loader.c  dynamic-array.c
